fix in type forwarding for method calls; fix in correct choice of explicit constructor